# Low-Level-C-Utils

./: CMakeLists.txt  README.md
include/: array_utils.h  math_utils.h  strings_utils.h
src/: array_utils.c  math_utils.c  strings_utils.c
tests/: array_main.c  main_math.c  strings_main.c
